# kobuki-detect-person

./: README.md
follow_person_cpp/: CMakeLists.txt  package.xml
follow_person_cpp/config/: params.yaml
follow_person_cpp/include/follow_person_cpp/: FollowLifeCycle.hpp  PIDNode.hpp  TFPublisherNode.hpp
follow_person_cpp/launch/: launch.py
follow_person_cpp/src/: FollowLifeCycle_main.cpp  TFPublisher_main.cpp
follow_person_cpp/src/follow_person_cpp/: FollowLifeCycle.cpp  PIDNode.cpp  TFPublisherNode.cpp
